--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
-　　---
-　　layout: default
-　　title: 我的Blog
-　　---
-　　<h2>{{ page.title }}</h2>
-　　<p>最新文章</p>
-　　<ul>
-  　　　　{% for post in site.posts %}
-  　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl  }} }}
+# 文档编写规范
+
+## 文档结构
+
+* 封面
+* 版本修订信息
+* 目录索引
+* 附录
+
+
+## 封目录三级显示索引
+
+* 标题
+* 版本
+* 阅读对象/存档管理/有效时间/保密等级
+
+## 版本修订信息
+
+* 版本/修订者/日期/内容/备注
+
+## 目录索引
+
+* 目录三级显示索引
+
+## 项目编号
+
+* 一级项目编号
+
+> 使用1. 2. 3. 4.5 来标识
+
+* 二级项目编号
+
+> 使用1.1 1.2 1.3 2.2来标识
+
+
+* 三级项目编号
+
+> 使用1.1.1  1.1.2 来标识
+
+## 字号
+
+* 封面标题 初号
+* 封面版本 二号
+* 一级项目编号 一号
+* 二级项目编号 二号
+* 三级项目编号 三号
+* 正文 小四号
+
+## 页眉页脚
+
+* 页眉
+> 上海电银信息技术有限公司
+
+* 页脚
+> © 2013-2016 上海电银信息技术有限公司
+
